# utsure

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  PLANS.md  README.md
.github/workflows/: windows-msys2.yml
cmake/: UtsureCompilerWarnings.cmake  UtsureDependencies.cmake
docs/: roadmap.md
docs/architecture/: adapters.md  dependencies.md  project-layout.md  streaming-transcode-pipeline.md
docs/release/: windows-portable.md
docs/setup/: windows-msys2.md
scripts/ci/: windows-msys2-build-ffmpeg.sh  windows-msys2-build-ffms2.sh  windows-msys2-build-libassmod.sh  windows-msys2-build.sh  windows-msys2-check-subtitle-stress-discovery.sh  windows-msys2-dependency-audit.sh  windows-msys2-package-portable.sh  windows-msys2-run-subtitle-stress-matrix.sh
src/app/: CMakeLists.txt  encode_job_progress_qt_types.hpp  encode_job_runner_controller.cpp  encode_job_runner_controller.hpp  encode_job_runner_worker.cpp  encode_job_runner_worker.hpp  main.cpp  main_window.cpp  main_window.hpp  preview_audio_controller.cpp  preview_audio_controller.hpp  preview_audio_worker.cpp  preview_audio_worker.hpp  preview_frame_renderer_controller.cpp  preview_frame_renderer_controller.hpp  preview_frame_renderer_worker.cpp  preview_frame_renderer_worker.hpp  preview_surface_widget.cpp  preview_surface_widget.hpp  trim_timeline_widget.cpp  trim_timeline_widget.hpp
src/app/resources/: app_resources.qrc  windows_app_icon.rc.in
src/app/tools/: svg_to_ico.cpp
src/core/: CMakeLists.txt
src/core/include/utsure/core/: build_info.hpp
src/core/include/utsure/core/job/: batch_parallelism.hpp  encode_job.hpp  encode_job_preflight.hpp  encode_job_report.hpp  output_naming.hpp
src/core/include/utsure/core/media/: audio_output.hpp  audio_stream_selection.hpp  decoded_media.hpp  media_decode_report.hpp  media_decoder.hpp  media_encoder.hpp  media_info.hpp  media_inspection_report.hpp  media_inspector.hpp  preview_trim.hpp  source_import_paths.hpp
src/core/include/utsure/core/subtitles/: subtitle_auto_selection.hpp  subtitle_font_recovery.hpp  subtitle_frame_composer.hpp  subtitle_renderer.hpp
src/core/include/utsure/core/timeline/: timeline.hpp
src/core/src/: build_info.cpp
src/core/src/adapters/ffms2/: ffms2_preview_backend.cpp  ffms2_preview_backend.hpp
src/core/src/adapters/libassmod/: libassmod_rgba_bitmap_validation.hpp  libassmod_subtitle_renderer.cpp
src/core/src/job/: batch_parallelism.cpp  encode_job.cpp  encode_job_preflight.cpp  encode_job_report.cpp  encode_job_working_set_guard.hpp  output_naming.cpp
src/core/src/media/: audio_output.cpp  audio_stream_selection.cpp  decoded_media.cpp  ffmpeg_media_support.cpp  ffmpeg_media_support.hpp  media_decode_report.cpp  media_decoder.cpp  media_encoder.cpp  media_inspection_report.cpp  media_inspector.cpp  preview_trim.cpp  source_import_paths.cpp  streaming_transcode_pipeline.cpp  streaming_transcode_pipeline.hpp  transcode_threading.hpp
src/core/src/process/: external_tool_runner.cpp  external_tool_runner.hpp
src/core/src/subtitles/: subtitle_auto_selection.cpp  subtitle_bitmap_compositor.cpp  subtitle_bitmap_compositor.hpp  subtitle_burn_in.cpp  subtitle_burn_in.hpp  subtitle_composition_diagnostics.hpp  subtitle_font_recovery.cpp  subtitle_frame_composer.cpp  subtitle_renderer.cpp  subtitle_runtime_options.hpp
src/core/src/timeline/: timeline.cpp
tests/core/: CMakeLists.txt  batch_parallelism_tests.cpp  encode_job_preflight_tests.cpp  encode_job_tests.cpp  libassmod_subtitle_adapter_tests.cpp  media_decode_tests.cpp  media_encode_tests.cpp  media_inspection_tests.cpp  output_naming_tests.cpp  source_import_paths_tests.cpp  subtitle-burn-empty-bitmap-sample.ass  subtitle-burn-gradient-sample.ass  subtitle-burn-img-sample.ass  subtitle-burn-sample.ass  subtitle-burn-stress-sample.ass  subtitle_auto_selection_tests.cpp  subtitle_bitmap_compositor_tests.cpp  subtitle_burn_in_tests.cpp  subtitle_font_recovery_tests.cpp  subtitle_renderer_tests.cpp  timeline_tests.cpp
